[package]
name = "greenhouse-controller"
version = "0.1.0"
authors = ["Luka Chassaing contact@luka-chassaing.fr"]
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
dotenv = "0.15"
warp = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rppal = "0.12.0"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
lto = true
opt-level = 3
